--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.uri = mongodb://localhost:27017/shorten_url
+spring.data.mongodb.uri = mongodb://localhost:27017
+spring.data.mongodb.database = admin
+
