--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.khanhdpdx</groupId>
     <artifactId>shorten_url</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>shorten_url</name>
     <description>Demo project for Spring Boot</description>
     <properties>
