fixed generate token and add user_id for shorten url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.data.mongodb.uri = mongodb://localhost:27017
 spring.data.mongodb.database = admin
 
+# JWT secret key
+jwt.secret=khanhdpdx21122001nguyentankhanhdaihocbkdanang
+
+jwt.jwtExpirationInMs = 604800000
