--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.data.mongodb.database = admin
 
 # JWT secret key
 jwt.secret=khanhdpdx21122001nguyentankhanhdaihocbkdanang
-
 jwt.jwtExpirationInMs = 604800000
+
+#logger
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+
