--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.data.mongodb.uri = mongodb://localhost:27017
-spring.data.mongodb.database = admin
+# General Configuration
+server.port=3000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+domain.name=http://tankhanh.tk
+
+# Database connection properties
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
+# Statement logging and statistics
+spring.jpa.show-sql=true
 
 # JWT secret key
 jwt.secret=khanhdpdx21122001nguyentankhanhdaihocbkdanang
